{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 38,
  "lineage": "350b6597-b386-2a00-6ef7-e81306c7de94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "super_mario_instace",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:523857158483:instance/i-073fd9b3e9629850a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073fd9b3e9629850a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "super-mario",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3c83cec5e6381dc",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-52-90-94-11.compute-1.amazonaws.com",
            "public_ip": "52.90.94.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4f31cf3d4058851",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05de968b6c996174e",
            "tags": {
              "Name": "Super_mario"
            },
            "tags_all": {
              "Name": "Super_mario"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0765dd05ffb252e59"
            ]
          },
          "dependencies": [
            "aws_security_group.mario_sg",
            "aws_subnet.subnet_publica",
            "aws_vpc.vpc_super_mario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523857158483:internet-gateway/igw-0740d15eae7a7df5e",
            "id": "igw-0740d15eae7a7df5e",
            "owner_id": "523857158483",
            "vpc_id": "vpc-0155f7bad61b7744c"
          },
          "dependencies": [
            "aws_vpc.vpc_super_mario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523857158483:route-table/rtb-001044ad1d894b6d2",
            "id": "rtb-001044ad1d894b6d2",
            "owner_id": "523857158483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0740d15eae7a7df5e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnet RT"
            },
            "tags_all": {
              "Name": "Public subnet RT"
            },
            "vpc_id": "vpc-0155f7bad61b7744c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_super_mario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab4f06788452425c",
            "route_table_id": "rtb-001044ad1d894b6d2",
            "subnet_id": "subnet-05de968b6c996174e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.subnet_publica",
            "aws_vpc.vpc_super_mario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mario_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523857158483:security-group/sg-0765dd05ffb252e59",
            "description": "Permite conexao HTTP a acesso via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0765dd05ffb252e59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mario_sg",
            "name_prefix": "",
            "owner_id": "523857158483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0155f7bad61b7744c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_super_mario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523857158483:subnet/subnet-05de968b6c996174e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05de968b6c996174e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523857158483",
            "tags": {
              "Name": "super-subnet"
            },
            "tags_all": {
              "Name": "super-subnet"
            },
            "vpc_id": "vpc-0155f7bad61b7744c"
          },
          "dependencies": [
            "aws_vpc.vpc_super_mario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_super_mario",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523857158483:vpc/vpc-0155f7bad61b7744c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4e7b6fd3bea3886",
            "default_route_table_id": "rtb-067ed2f1e79169e92",
            "default_security_group_id": "sg-0fe42f7a2d31c99b8",
            "dhcp_options_id": "dopt-64390d1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0155f7bad61b7744c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-067ed2f1e79169e92",
            "owner_id": "523857158483",
            "tags": {
              "Name": "vpc_super_mario"
            },
            "tags_all": {
              "Name": "vpc_super_mario"
            }
          }
        }
      ]
    }
  ]
}